src/App.css
@import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');

.app__header {
  padding: 2rem;
  font-size: 5.5rem;
  background-color: black;
  color: lightpink;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 2rem;
  font-family: 'Agbalumo', sans-serif;
}

.app__input {
  max-width: 500px;
  background-color: lightpink;
  border: purple solid 2px;
  transition: all 500ms;
  font-size: 2.5rem;
  color: black; 
  padding: .25rem 1rem;
}

.app__main {
  padding: 3rem 8vw;
}

.app__input:focus {
  background-color: purple;
  color: white;
}

.app__form {
  display: flex;
  flex-direction: row;
  gap: 3rem;
  flex-wrap: wrap;
}

.app__form input {
  min-width: 300px;
  max-width: 32vw;
  font-size: 1.5rem;
  border-color: purple;
  border-width: 2px;
}

.app__form span {
  font-size: 2rem;
  font-weight: 600;
}

.app__btn {
  font-size: 1.5rem;
  background-color: purple;
  border-color: purple;
  color: white;
  transition: all 500ms;
}

.app__btn:hover {
  background-color: pink;
  border-color: pink;
  color: black;
}

.app__btn--reverse {
  background-color: pink;
  border-color: pink;
  color: black;
}

.app__btn--reverse:hover {
  background-color: purple;
  border-color: purple;
  color: white;
}

.app__items {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  margin-top: 2rem;
  flex-wrap: wrap;
  max-width: 64vw;
}

.app__item {
  display: inline;
  background-color: black;
  color: pink;
  font-size: 2rem;
  font-weight: 600;
  padding: .5rem 1rem;
  border-radius: 1rem;
  text-align: center;
  width: 32%;
  min-width: 160px;
  max-width: 500px;
  transition: all 500ms;
}

.app__item:hover {
  color: black;
  background-color: pink;
}

.app__grid {
  margin-top: 2rem;
  display: grid;
  grid-template-columns: 3fr 2fr;
  grid-template-rows: 1fr;
}

.right {
  padding: 2rem;
  display: flex;
  flex-direction: column;
}

.app__total {
  font-size: 2rem;
  font-weight: bold;
  margin-bottom: 2rem;
}

.app__img {
  border-radius: 1rem;
  max-width: 40vw;
  max-height: 45vh;
}


@media screen and (max-width: 768px) {
  .app__header * {
    font-size: 2rem;
  }
  .app__input {
    font-size: 1.5rem;
  }
  .app__form {
    gap: 1rem;
  }
  .app__btn {
    font-size: 1.25rem;
  }
  .app__main {
    padding: 1rem 2rem;
  }
  .app__form input {
    font-size: 1.25rem;
    min-width: 80vw;
  }
  .app__form span {
    font-size: 1.5rem;
  }
  .app__items {
    margin-top: .5rem;
    width: 100%;
    max-width: max-content;
    gap: .5rem;
    justify-content: space-around;
  }
  .app__item {
    font-size: 1.25rem;
    padding: .25rem .5rem;
    min-width: 40%;
    width: fit-content;
  }
  .app__grid {
    display: flex;
    flex-direction: column-reverse;
    margin-top: .5rem;
  }
  .right {
    padding: 1rem 0;
    justify-content: center;
    align-items: center;
    gap: 1rem;

  }
  .app__total {
    font-size: 1.5rem;
    margin: 0;
  }
}

